base markup wip

--- a/tm-static/index.html
+++ b/tm-static/index.html
@@ -8,6 +8,22 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<div class="header">
+		<div class="container">
+			<div class="title">Спорт</div>
+			<div class="days-heading">
+				<div class="wrapper">
+					<div class="day-head">Понедельник</div>
+					<div class="day-head">Вторник</div>
+					<div class="day-head">Среда</div>
+					<div class="day-head">Четверг</div>
+					<div class="day-head">Пятница</div>
+					<div class="day-head">Суббота</div>
+					<div class="day-head">Воскресенье</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="section">
 		<div class="week">
 			<div class="week-container">
@@ -16,17 +32,107 @@
 					<p class="week-date">(11.06.18 - 17.06.18)</p>
 				</div>
 				<div class="week-days">
-					<div class="card day1">Monday</div>
-					<div class="card day2">Vtornik</div>
-					<div class="card day3">Sreda</div>
-					<div class="card day4">Chetverg</div>
-					<div class="card day5">Friday</div>
-					<div class="card day6">Subbota</div>
-					<div class="card day7">Sunday</div>
+					<div class="week-wrapper">
+						<div class="day day--1">
+							<div class="day-wrapper">
+								<h4>Подтягивания</h4>
+								<p class="date">11.06.18</p>
+								<p class="goal">Цель: <span>3x30</span></p>
+								<p class="result"><input type="text" value="" placeholder="Итог.."></p>
+							</div>
+						</div>
+						<div class="day day--2">
+							<div class="day-wrapper">
+								<h4>Пресс</h4>
+								<p class="date">12.06.18</p>
+								<p class="goal">Цель: <span>3x30</span></p>
+								<p class="result"><input type="text" value="" placeholder="Итог.."></p>
+							</div>
+						</div>
+						<div class="day day--3">
+							<div class="day-wrapper">
+								<h4>Трицепс</h4>
+								<p class="date">13.06.18</p>
+								<p class="goal">Цель: <span>3x30</span></p>
+								<p class="result"><input type="text" value="" placeholder="Итог.."></p>
+							</div>
+						</div>
+						<div class="day day--4 today">
+							<div class="day-wrapper">
+								<h4>Пистолетики</h4>
+								<p class="date">14.06.18</p>
+								<p class="goal">Цель: <span>3x30</span></p>
+								<p class="result"><input type="text" value="" placeholder="Итог.."></p>
+							</div>
+						</div>
+						<div class="day day--5">
+							<div class="day-wrapper">
+								<h4>Подтягивания</h4>
+								<p class="date">15.06.18</p>
+								<p class="goal">Цель: <span>3x30</span></p>
+								<p class="result"><input type="text" value="" placeholder="Итог.."></p>
+							</div>
+						</div>
+						<div class="day day--6">
+							<div class="day-wrapper">
+								<h4>Пресс</h4>
+								<p class="date">16.06.18</p>
+								<p class="goal">Цель: <span>3x30</span></p>
+								<p class="result"><input type="text" value="" placeholder="Итог.."></p>
+							</div>
+						</div>
+						<div class="day day--7">
+							<div class="day-wrapper">
+								<h4>Отжимания</h4>
+								<p class="date">17.06.18</p>
+								<p class="goal">Цель: <span>3x30</span></p>
+								<p class="result"><input type="text" value="" placeholder="Итог.."></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="week">
+			<div class="week-container">
+				<div class="week-title">
+					<h3>Неделя #2</h3>
+					<p class="week-date">(11.06.18 - 17.06.18)</p>
+				</div>
+				<div class="week-days">
+					<div class="week-wrapper">
+						<div class="day day--1">Monday</div>
+						<div class="day day--2">Vtornik</div>
+						<div class="day day--3">Sreda</div>
+						<div class="day day--4">Chetverg</div>
+						<div class="day day--5">Friday</div>
+						<div class="day day--6">Subbota</div>
+						<div class="day day--7">Sunday</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="week">
+			<div class="week-container">
+				<div class="week-title">
+					<h3>Неделя #3</h3>
+					<p class="week-date">(11.06.18 - 17.06.18)</p>
+				</div>
+				<div class="week-days">
+					<div class="week-wrapper">
+						<div class="day day--1">Monday</div>
+						<div class="day day--2">Vtornik</div>
+						<div class="day day--3">Sreda</div>
+						<div class="day day--4">Chetverg</div>
+						<div class="day day--5">Friday</div>
+						<div class="day day--6">Subbota</div>
+						<div class="day day--7">Sunday</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div class="footer"></div>
 	<script src="js/main.js"></script>
 </body>
 </html>
